  MaximumMatch bug fixed, no longer disregards key events if modifiers are present (CTRL-BACKSPACE beyond first character now works correctly)
  EntityUiUtil.createEntityField() improved
  DefaultEntityEditModel bug fixed, setEntity() was used during update() and delete(), which triggered isSetEntityAllowed(), doSetEntity() added for internal use
  IntelliJ analyzis run, Arrays.asList() with single items replaced with Collections.singletonList()
  EntityUtil.getModifiedExceptionMessage() bug fixed, did not handle deleted entities
  EntityUtil.getModifiedExceptionMessage() bug fixed, did not show the original value
  DefaultEntityEditModel.insert() nows sets the inserted entity instead of just the primary key values
  DefaultEntityEditModel.insert(List<Entities>) bug fixed, did not return silently on receiving an empty list, fired afterInsertEvent
  DefaultEntityEditModel, protected methods for firing before and after insert/update/delete events added
  ControlProvider.ButtonControlIterator now uses JLabel for separator
  AutoCompletion added, MaximumMatch now extends CompletionDocument
  Sonar/IntelliJ analysis
  EntityEditPanel now sets the actual DateInputPanel as the property component
  DefaultEntityEditModel, DefaultInsertEvent, DefaultUpdateEvent and DefaultDeleteEvent now protected instead of private
  EntityEditModel, before insert, update and delete listeners now provide the same info as after listeners
  DefaultEntityEditModel.doDelete() now returns the deleted entities, after delete event now contains the actual entities returned by doDelete()
  Sonar run
  EntityUtil.getModifiedExceptionMessage() entity caption added to error message for clarification
  DefaultEntityComboBoxModel, foreign key filter model is now strict, no longer shows all items if foreign key value is null or no filter values are specified
  Reduced unit test dependencies on demos
  Unit test dependencies on demos removed, build.xml updated accordingly