@@ -2,6 +2,7 @@
   <info organisation="org.jminor" module="jminor" />
 
   <configurations>
+    <conf name="ant.util" description="Utilities required by the build process" />
     <conf name="build.core" description="used for building core framework components" />
     <conf name="build.plugins" description="used for building framework plugins" />
     <conf name="build.demos" description="used for building framework demos" />
@@ -12,6 +13,13 @@
   </configurations>
 
   <dependencies>
+    <!--build utilities-->
+    <dependency org="org.jacoco" name="org.jacoco.ant" rev="0.7.5.201505241946"
+            conf="ant.util->default"/>
+    <dependency org="org.apache.ivy" name="ivy" rev="2.4.0"
+            conf="ant.util->default"/>
+    <dependency org="com.threerings" name="getdown" rev="1.4"
+            conf="ant.util->default"/>
     <!--logging-->
     <dependency org="ch.qos.logback" name="logback-classic" rev="1.1.2" transitive="false"
                 conf="
